--- a/seventhPartReactCourse/leon-router/package.json
+++ b/seventhPartReactCourse/leon-router/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jquery": "~3.4.1",
     "path-to-regexp": "6.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
