--- a/seventhPartReactCourse/leon-router/package.json
+++ b/seventhPartReactCourse/leon-router/package.json
@@ -1,21 +1,31 @@
 {
   "name": "leon-router",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "main": "lib/src/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest",
+    "prepare": "npm run test && swc ./src/*.jsx -d lib && rm lib/src/App.js lib/src/main.js && cp src/consts.js lib/src/consts.js && cp src/utils/utils.js lib/src/utils.js"
   },
   "dependencies": {
-    "jquery": "~3.4.1",
-    "path-to-regexp": "6.2.2",
+    "jquery": "^3.7.1",
+    "path-to-regexp": "6.2.2"
+  },
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.24",
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -23,6 +33,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "happy-dom": "^14.12.0",
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
